fix: swagger and integer format (parks info IDSA)
