# docs/swagger.json
@@ -127,6 +127,12 @@
                         "name": "city",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Ano dos dados",
+                        "name": "year",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -256,6 +262,12 @@
                         "name": "city",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Ano dos dados",
+                        "name": "year",
+                        "in": "query"
                     }
                 ],
                 "responses": {
